--- a/SFML-PONG/Pong.vcxproj
+++ b/SFML-PONG/Pong.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Source\AssetPaths.cpp" />
+    <ClCompile Include="Source\AudioManager.cpp" />
     <ClCompile Include="Source\GameplayElements\Ball.cpp" />
     <ClCompile Include="Source\GameplayElements\Paddle.cpp" />
     <ClCompile Include="Source\GameplayLoop.cpp" />
@@ -141,11 +142,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\AssetPaths.h" />
+    <ClInclude Include="Include\AudioManager.h" />
     <ClInclude Include="Include\GameplayElements\Ball.h" />
     <ClInclude Include="Include\GameplayElements\Paddle.h" />
     <ClInclude Include="Include\GameplayLoop.h" />
     <ClInclude Include="Include\GameStates\GameplayState.h" />
     <ClInclude Include="Include\GameState.h" />
+    <ClInclude Include="Include\SoundEffects.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\fonts\OpenSans.ttf" />
