--- a/SFML-PONG/Pong.vcxproj
+++ b/SFML-PONG/Pong.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Source\GameplayElements\Ball.cpp" />
     <ClCompile Include="Source\GameplayElements\Paddle.cpp" />
     <ClCompile Include="Source\GameplayLoop.cpp" />
+    <ClCompile Include="Source\GameStates\GameOverState.cpp" />
     <ClCompile Include="Source\GameStates\GameplayState.cpp" />
     <ClCompile Include="Source\GameStates\MainMenuState.cpp" />
   </ItemGroup>
@@ -149,6 +150,7 @@
     <ClInclude Include="Include\GameplayElements\Ball.h" />
     <ClInclude Include="Include\GameplayElements\Paddle.h" />
     <ClInclude Include="Include\GameplayLoop.h" />
+    <ClInclude Include="Include\GameStates\GameOverState.h" />
     <ClInclude Include="Include\GameStates\GameplayState.h" />
     <ClInclude Include="Include\GameState.h" />
     <ClInclude Include="Include\GameStates\MainMenuState.h" />
