--- a/SFML-PONG/Pong.vcxproj
+++ b/SFML-PONG/Pong.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Source\GameplayLoop.cpp" />
     <ClCompile Include="Source\GameStates\GameOverState.cpp" />
     <ClCompile Include="Source\GameStates\GameplayState.cpp" />
+    <ClCompile Include="Source\GameStates\HostLobbyState.cpp" />
     <ClCompile Include="Source\GameStates\MainMenuState.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +154,7 @@
     <ClInclude Include="Include\GameStates\GameOverState.h" />
     <ClInclude Include="Include\GameStates\GameplayState.h" />
     <ClInclude Include="Include\GameState.h" />
+    <ClInclude Include="Include\GameStates\HostLobbyState.h" />
     <ClInclude Include="Include\GameStates\MainMenuState.h" />
     <ClInclude Include="Include\SoundEffects.h" />
   </ItemGroup>
