--- a/SFML-PONG/Pong.vcxproj
+++ b/SFML-PONG/Pong.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Source\GameStates\HostLobbyState.cpp" />
     <ClCompile Include="Source\GameStates\JoinLobbyState.cpp" />
     <ClCompile Include="Source\GameStates\MainMenuState.cpp" />
+    <ClCompile Include="Source\GameStates\MultiplayerGameplayState.cpp" />
     <ClCompile Include="Source\NetworkManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="Include\GameStates\HostLobbyState.h" />
     <ClInclude Include="Include\GameStates\JoinLobbyState.h" />
     <ClInclude Include="Include\GameStates\MainMenuState.h" />
+    <ClInclude Include="Include\GameStates\MultiplayerGameplayState.h" />
     <ClInclude Include="Include\NetworkManager.h" />
     <ClInclude Include="Include\SoundEffects.h" />
   </ItemGroup>
